@@ -1,3 +1,7 @@
+Mon Dec 23 17:07:09 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Mon Dec 23 16:58:21 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
